# upn-generator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  STATUS.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  bills.rs  config.rs  mod.rs  splits.rs  upn.rs
src-tauri/src/db/: migrations.rs
src/components/: BillingPageShell.tsx  WorkflowStatusBar.tsx
src/components/settings/: ApartmentsSection.tsx  BuildingSection.tsx  DataSection.tsx  ProvidersSection.tsx  SmtpSection.tsx
src/lib/: billing-period-selection.ts  billing-period-selection.tsx  ipc.ts  types.ts  workflow-status.ts
src/routes/: __root.tsx  bills.tsx  index.tsx  settings.tsx  splits.tsx  upn.tsx
