[package]
name = "upn-generator"
version = "0.1.0"
description = "UPN payment form generator for apartment buildings"
authors = ["you"]
edition = "2021"

[lib]
name = "upn_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs-next = "2"
regex = "1"
pdf-extract = "0.7"
printpdf = "0.6"
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }
base64 = "0.22"
chrono = "0.4"
qrcodegen = "1.8"
lopdf = "0.34"
windows = { version = "0.61", features = [
  "Foundation",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
] }

[profile.release]
opt-level = 2        # slightly less optimization, noticeably faster compile
lto = false          # disabling LTO saves 5-8 min on CI
codegen-units = 4    # parallel codegen (default is 1 for release)
strip = "symbols"    # smaller binary, no debug info needed
